# student-grades

./: CMakeLists.txt  FileGenerator.h  Makefile  Processor.cpp  Processor.h  README.md  Student.cpp  Students.txt  Timer.cpp  Timer.h  main.cpp  student-grades-v1.0.cbp  student-grades-v1.0.depend
data/: students_10000.txt  students_100000.txt
output/: failed.txt  passed.txt
src/: FileGenerator.cpp  Processor.cpp  Processor.h  main.cpp  student.h
